--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 SECRET_KEY=7_9w0%!mzcuw8@9fh6*=0583k)n+pn7ou99o-v0pa#fz390h13
 EMAIL_HOST_USER=deepanshumaitrey@gmail.com
-
-EMAIL_HOST_PASSWORD=
+EMAIL_HOST_PASSWORD=ficwbsmobsgjvkja
